--- a/printer.cfg
+++ b/printer.cfg
@@ -1,1 +1,476 @@
+[include mainsail.cfg]
+# !Ender-5 S1
+# printer_size: 220x220x280
+# version: 3.0
+# Motherboard (Late 2020/2021) as the heater pins changed.
+# To use this config, during "make menuconfig" select the STM32F401
+# with a "64KiB bootloader" and serial (on USART1 PA10/PA9)
+# communication.
+
+# Flash this firmware by copying "out/klipper.bin" to a SD card and
+# turning on the printer with the card inserted. The firmware
+# filename must end in ".bin" and must not match the last filename
+# that was flashed.
+
+# See docs/Config_Reference.md for a description of parameters.
+
+###fluidd set
+[virtual_sdcard]
+path: /home/pi/printer_data/gcodes #change if you set up a different name during install
+
+[display_status]
+
+[pause_resume]
+
+[exclude_object]
+
+[gcode_macro START_PRINT]
+variable_bed_temp: 60
+variable_extruder_temp: 185
+gcode:
+      # Start bed heating
+      M140 S{bed_temp}
+      # Use absolute coordinates 
+      G90 
+      # Home the printer 
+      G28 
+      # Reset extruder 
+      G92 E0
+       # Heat the bed and wait
+      M190 S{bed_temp}
+      #BED_MESH_CALIBRATE PROFILE=mesh1 METHOD=automatic
+      BED_MESH_PROFILE LOAD=default
+      # Move to wait position 
+      G1 X0 Y0 Z50 F4000.0  
+      # Set and wait for nozzle to reach temperature 
+      M109 S{extruder_temp}
+       # Move Z axis up 
+      G1 Z2.0 F3000 
+      # Move to start position 
+      G1 X1.1 Y20 Z0.28 F5000.0 
+      # Draw the first line
+      G1 X1.1 Y200.0 Z0.28 F1500.0 E15 
+      # Move to the side
+      G1 X1.4 Y200.0 Z0.28 F5000.0 
+      # Draw the second line 
+      G1 X1.4 Y20 Z0.28 F1500.0 E30 
+      # Reset extruder 
+      G92 E0
+      # Load Skew Correction
+      #SKEW_PROFILE LOAD=my_skew_profile #Uncomment once you get your skew set up
+      # Print message on LCD
+      M117 By your command!
+
+[gcode_macro END_PRINT]
+variable_machine_depth: 220
+gcode:
+    # Turn off bed, extruder, and fan
+    M140 S0
+    M104 S0
+    M106 S0
+    # Relative positionning
+    G91
+    # Clear Skew Correction
+    #SET_SKEW CLEAR=1 #Uncomment once you get your skew set up
+    # Retract and raise Z
+    G1 Z0.2 E-2 F2400
+    # Wipe out
+    G1 X5 Y5 F3000
+    # Raise Z more
+    G1 Z10
+    # Absolute positionning
+    G90
+    # Present print
+    G1 X0 Y{machine_depth}
+    # Disable steppers
+    M84
+    # Print message on LCD
+    M117 That's All Folks
+    
+[gcode_macro PAUSE]
+description: Pause the actual running print
+rename_existing: PAUSE_BASE
+# change this if you need more or less extrusion
+variable_extrude: 1.0
+gcode:
+  ##### read E from pause macro #####
+  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
+  ##### set park positon for x and y #####
+  # default is your max posion from your printer.cfg
+  {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
+  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
+  ##### calculate save lift position #####
+  {% set max_z = printer.toolhead.axis_maximum.z|float %}
+  {% set act_z = printer.toolhead.position.z|float %}
+  {% if act_z < (max_z - 2.0) %}
+      {% set z_safe = 2.0 %}
+  {% else %}
+      {% set z_safe = max_z - act_z %}
+  {% endif %}
+  ##### end of definitions #####
+  PAUSE_BASE
+  G91
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    G1 E-{E} F2100
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}
+  {% if "xyz" in printer.toolhead.homed_axes %}
+    G1 Z{z_safe} F900
+    G90
+    G1 X{x_park} Y{y_park} F6000
+  {% else %}
+    {action_respond_info("Printer not homed")}
+  {% endif %} 
+
+[gcode_macro RESUME]
+description: Resume the actual running print
+rename_existing: RESUME_BASE
+gcode:
+  ##### read E from pause macro #####
+  {% set E = printer["gcode_macro PAUSE"].extrude|float %}
+  #### get VELOCITY parameter if specified ####
+  {% if 'VELOCITY' in params|upper %}
+    {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
+  {%else %}
+    {% set get_params = "" %}
+  {% endif %}
+  ##### end of definitions #####
+  {% if printer.extruder.can_extrude|lower == 'true' %}
+    G91
+    G1 E{E} F2100
+  {% else %}
+    {action_respond_info("Extruder not hot enough")}
+  {% endif %}  
+  RESUME_BASE {get_params}
+
+[gcode_macro SET_MATERIAL]
+description: Set values based on material type
+variable_material: ''
+gcode:
+    {% set MATERIAL = params.MATERIAL|default('PLA')|string %} ; Get material type from slicer
+    SET_GCODE_VARIABLE MACRO=SET_MATERIAL VARIABLE=material VALUE='"{MATERIAL}'" ; Save the material type to a variable just because
+    {% if MATERIAL == 'PLA' %} ; If material type is PLA
+        BED_MESH_PROFILE LOAD="pla_mesh" ; Load bed mesh
+        SET_PRESSURE_ADVANCE ADVANCE=0.035 SMOOTH_TIME=0.040 ; Set pressure_advance settings
+        SET_GCODE_OFFSET Z=0 ; Set z_offset
+        SET_VELOCITY_LIMIT VELOCITY=100 ACCEL=2000 ; Set max speed/acceleration
+        SET_INPUT_SHAPER SHAPER_FREQ_X=58.6 SHAPER_FREQ_Y=34.2 SHAPER_TYPE_X=mzv SHAPER_TYPE_Y=mzv ; Set input_shaper
+    {% elif MATERIAL == 'ABS' %} ; If material type is ABS
+        BED_MESH_PROFILE LOAD="abs_mesh" ; Load bed mesh
+        SET_PRESSURE_ADVANCE ADVANCE=0.035 SMOOTH_TIME=0.040 ; Set pressure_advance settings
+        SET_GCODE_OFFSET Z=0 ; Set z_offset
+    {%else %} ; If any other material type
+        BED_MESH_PROFILE LOAD="default" ; Load bed mesh
+        SET_PRESSURE_ADVANCE ADVANCE=0.035 SMOOTH_TIME=0.040 ; Set pressure_advance settings
+        SET_GCODE_OFFSET Z=0 ; Set z_offset
+    {% endif %}
+
+[gcode_macro SET_NOZZLE]
+description: Set values based on nozzle diameter
+variable_nozzle: 0
+gcode:
+    {% set NOZZLE = params.NOZZLE|default(0.4)|float %} ; Get nozzle diameter from slicer
+    SET_GCODE_VARIABLE MACRO=SET_NOZZLE VARIABLE=nozzle VALUE={NOZZLE} ; Save the nozzle diameter to a variable just because
+    {% if NOZZLE == 0.4 %} ; If nozzle diameter is 0.4
+        ## Set z_offset settings
+        SET_GCODE_OFFSET Z=0 ; Set z_offset
+    {% elif NOZZLE == 0.2 %} ; If nozzle diameter is 0.2
+        SET_GCODE_OFFSET Z=0 ; Set z_offset
+    {%else %} ; If any other nozzle diameter
+        SET_GCODE_OFFSET Z=0 ; Set z_offset
+    {% endif %}
+
+
+[gcode_macro BED_MESH]
+gcode:
+  G28
+  M109 S210
+  M190 S60
+  bed_mesh_calibrate
+
+[gcode_macro ZProbe]
+gcode:
+  G28
+  M109 S210
+  M190 S60
+  probe_calibrate
+
+[gcode_macro BED_PROBE_THEN_MESH]
+gcode:
+  G28
+  M109 S210
+  M190 S60
+  probe_calibrate
+  bed_mesh_calibrate
+
+[gcode_macro MAINTENANCE]
+gcode:
+  G28
+  M109 S210
+  M190 S60
+
+[gcode_macro CANCEL_PRINT]
+description: Cancel the actual running print
+rename_existing: CANCEL_PRINT_BASE
+gcode:
+  TURN_OFF_HEATERS
+  {% if "xyz" in printer.toolhead.homed_axes %}
+    #SET_SKEW CLEAR=1    # Clear Skew Correction   Uncomment once you have skew set up
+    G91
+    G1 Z4.5 F300
+    G90
+  {% else %}
+    {action_respond_info("Printer not homed")}
+  {% endif %}
+    G28 X Y
+  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
+    G1 Y{y_park} F2000
+    M84
+  CANCEL_PRINT_BASE
+
+[gcode_macro LOAD_FILAMENT]
+gcode:
+    {% set speed = params.SPEED|default(300) %}
+    {% set max_velocity = printer.configfile.settings['extruder'].max_extrude_only_velocity %}
+    SAVE_GCODE_STATE NAME=load_state
+    G91
+    G92 E0
+    G1 E50 F{max_velocity} # fast-load
+    G1 E25 F{speed} # purge
+    RESTORE_GCODE_STATE NAME=load_state
+
+[gcode_macro UNLOAD_FILAMENT]
+gcode:
+    {% set speed = params.SPEED|default(300) %}
+    {% set max_velocity = printer.configfile.settings['extruder'].max_extrude_only_velocity %}
+    SAVE_GCODE_STATE NAME=unload_state
+    G91
+    G92 E0
+    G1 E25 F{speed} # purge
+    G1 E-50 F{max_velocity} # fast-unload
+    RESTORE_GCODE_STATE NAME=unload_state
+
+
+[stepper_x]
+step_pin: PC2
+dir_pin: !PB9
+enable_pin: !PC3
+rotation_distance: 40
+microsteps: 16
+endstop_pin: !PA5
+position_min: -5
+position_endstop: 220
+position_max: 220
+homing_speed: 80
+
+[stepper_y]
+step_pin: PB8
+dir_pin: !PB7
+enable_pin: !PC3
+rotation_distance: 40
+microsteps: 16
+endstop_pin: !PA6
+position_min: -2
+position_endstop: 220
+position_max: 220
+homing_speed: 80
+
+[stepper_z]
+step_pin: PB6
+dir_pin: PB5
+enable_pin: !PC3
+rotation_distance: 8
+microsteps: 16
+endstop_pin: probe:z_virtual_endstop           #enable to use bltouch
+#endstop_pin: !PA15                #disable to use bltouch
+#position_endstop: -0.1
+position_min: -10
+position_max: 280
+homing_speed: 4
+second_homing_speed: 1
+homing_retract_dist: 2.0
+
+[extruder]
+max_extrude_only_distance: 1000.0
+step_pin: PB4
+max_extrude_cross_section: 5
+dir_pin: PB3
+enable_pin: !PC3
+rotation_distance: 7.401
+microsteps: 16
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+heater_pin: PA1
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: PC5
+pressure_advance: 0.0659
+#control: pid
+# tuned for stock hardware with 200 degree Celsius target
+#pid_kp = 19.780
+#pid_ki = 1.090
+#pid_kd = 89.752
+min_temp: 0
+max_temp: 305
+
+[heater_bed]
+heater_pin: PA7
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: PC4
+#control: pid
+# tuned for stock hardware with 50 degree Celsius target
+#pid_kp = 60.061
+#pid_ki = 0.400
+#pid_kd = 2254.534
+min_temp: 0
+max_temp: 130
+
+[verify_heater extruder]
+check_gain_time: 200
+hysteresis: 5
+
+[fan]
+pin: PA0
+kick_start_time: 0.5
+
+#set heater fan runnig with temperature over 60;
+[heater_fan my_nozzle_fan]
+pin: PC0
+max_power: 0.8
+shutdown_speed : 0
+heater:extruder
+heater_temp : 60
+fan_speed : 1.0
+
+[mcu]
+serial:/dev/serial/by-id/usb-1a86_USB_Serial-if00-port0   #check your printer
+restart_method: command
+
+#[mcu rpi]
+#serial: /tmp/klipper_host_mcu
+
+#[adxl345]
+#cs_pin: rpi:None
+#spi_speed: 2000000
+#spi_bus: spidev2.0
+
+#[resonance_tester]
+#accel_chip: adxl345
+#accel_per_hz: 70
+#probe_points:
+#    117.5,117.5,10
+
+
+[input_shaper]
+shaper_freq_x: 41.725
+shaper_freq_y: 29.155
+shaper_type: mzv
+
+
+[filament_switch_sensor filament_sensor]
+pause_on_runout: true
+switch_pin: ^!PC15
+
+#[skew_correction] #uncomment when you have set up skew
+
+[bltouch]
+sensor_pin: ^PC14       #signal check port ^stand for pull up
+control_pin: PC13       #singal control prot1
+x_offset: -13           #check your printer
+y_offset: 26            #check your printer
+#z_offset: 0          
+speed: 20
+samples: 2
+#probe_with_touch_mode = true
+
+[safe_z_home]
+home_xy_position:126, 97
+speed: 200
+z_hop: 10
+z_hop_speed: 10
+
+[bed_mesh]
+speed: 150
+horizontal_move_z: 5
+mesh_min: 4,26      #need to handle head distance with bl_touch #check your printer
+mesh_max: 207,216    #max probe range #check your printer
+probe_count: 10,10
+mesh_pps: 2,2
+fade_start: 1
+fade_end: 10
+fade_target: 0
+algorithm: bicubic
+
+# Bed screw adjustment
+[screws_tilt_adjust]
+screw1: 26,28                 #check your printer
+screw1_name: front left screw
+screw2: 194,28                #check your printer
+screw2_name: front right screw
+screw3: 194,198               #check your printer
+screw3_name: rear right screw
+screw4: 26,198                #check your printer
+screw4_name: rear left screw
+screw_thread: CW-M4
+
+[gcode_macro G29]				#界面中增加G29指令
+gcode:
+  G28
+  bed_mesh_calibrate
+  G1 X0 Y0 Z10 F4200
+
+[printer]
+kinematics: cartesian
+max_velocity: 300
+max_accel: 5000
+max_z_velocity: 10
+max_z_accel: 1000
+square_corner_velocity: 5.0
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bltouch]
+#*# z_offset = 1.960
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	0.080000, 0.071250, 0.060000, 0.045000, 0.067500, 0.065000, 0.062500, 0.087500, 0.111250, 0.140000
+#*# 	0.066250, 0.043750, 0.041250, 0.026250, 0.033750, 0.038750, 0.043750, 0.047500, 0.058750, 0.077500
+#*# 	0.035000, 0.042500, 0.040000, 0.012500, 0.031250, 0.022500, 0.018750, 0.041250, 0.056250, 0.072500
+#*# 	0.025000, 0.035000, 0.003750, 0.011250, 0.001250, -0.001250, -0.001250, 0.028750, 0.027500, 0.048750
+#*# 	0.011250, 0.005000, -0.008750, -0.007500, -0.010000, -0.007500, 0.001250, 0.001250, 0.025000, 0.023750
+#*# 	0.035000, -0.003750, -0.011250, -0.010000, -0.031250, -0.012500, -0.015000, 0.007500, 0.007500, 0.020000
+#*# 	0.016250, -0.023750, 0.010000, -0.015000, -0.016250, -0.025000, -0.033750, -0.003750, -0.003750, 0.016250
+#*# 	0.008750, -0.017500, -0.012500, -0.021250, -0.030000, -0.017500, -0.008750, -0.002500, 0.026250, 0.036250
+#*# 	0.028750, -0.001250, -0.001250, -0.007500, 0.006250, -0.001250, 0.018750, 0.037500, 0.041250, 0.047500
+#*# 	0.078750, 0.013750, 0.000000, -0.003750, 0.001250, 0.001250, 0.026250, 0.047500, 0.083750, 0.101250
+#*# x_count = 10
+#*# y_count = 10
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 4.0
+#*# max_x = 206.95
+#*# min_y = 26.0
+#*# max_y = 215.99
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 22.578
+#*# pid_ki = 1.461
+#*# pid_kd = 87.206
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 56.278
+#*# pid_ki = 0.398
+#*# pid_kd = 1990.132
+#*#
+#*# [skew_correction my_skew_profile]
+#*# xy_skew = 0.0036816894099505992
+#*# xz_skew = -0.0035433495996199816
+#*# yz_skew = 0.0018425363530131448
 
