--- a/printer.cfg
+++ b/printer.cfg
@@ -151,19 +151,19 @@ gcode:
     {% set MATERIAL = params.MATERIAL|default('PLA')|string %} ; Get material type from slicer
     SET_GCODE_VARIABLE MACRO=SET_MATERIAL VARIABLE=material VALUE='"{MATERIAL}'" ; Save the material type to a variable just because
     {% if MATERIAL == 'PLA' %} ; If material type is PLA
-        BED_MESH_PROFILE LOAD="pla_mesh" ; Load bed mesh
-        SET_PRESSURE_ADVANCE ADVANCE=0.035 SMOOTH_TIME=0.040 ; Set pressure_advance settings
-        SET_GCODE_OFFSET Z=0 ; Set z_offset
-        SET_VELOCITY_LIMIT VELOCITY=100 ACCEL=2000 ; Set max speed/acceleration
-        SET_INPUT_SHAPER SHAPER_FREQ_X=58.6 SHAPER_FREQ_Y=34.2 SHAPER_TYPE_X=mzv SHAPER_TYPE_Y=mzv ; Set input_shaper
+        #BED_MESH_PROFILE LOAD="pla_mesh" ; Load bed mesh
+        #SET_PRESSURE_ADVANCE ADVANCE=0.035 SMOOTH_TIME=0.040 ; Set pressure_advance settings
+        #SET_GCODE_OFFSET Z=0 ; Set z_offset
+        #SET_VELOCITY_LIMIT VELOCITY=100 ACCEL=2000 ; Set max speed/acceleration
+        #SET_INPUT_SHAPER SHAPER_FREQ_X=58.6 SHAPER_FREQ_Y=34.2 SHAPER_TYPE_X=mzv SHAPER_TYPE_Y=mzv ; Set input_shaper
     {% elif MATERIAL == 'ABS' %} ; If material type is ABS
-        BED_MESH_PROFILE LOAD="abs_mesh" ; Load bed mesh
-        SET_PRESSURE_ADVANCE ADVANCE=0.035 SMOOTH_TIME=0.040 ; Set pressure_advance settings
-        SET_GCODE_OFFSET Z=0 ; Set z_offset
+        #BED_MESH_PROFILE LOAD="abs_mesh" ; Load bed mesh
+        #SET_PRESSURE_ADVANCE ADVANCE=0.035 SMOOTH_TIME=0.040 ; Set pressure_advance settings
+        #SET_GCODE_OFFSET Z=0 ; Set z_offset
     {%else %} ; If any other material type
-        BED_MESH_PROFILE LOAD="default" ; Load bed mesh
-        SET_PRESSURE_ADVANCE ADVANCE=0.035 SMOOTH_TIME=0.040 ; Set pressure_advance settings
-        SET_GCODE_OFFSET Z=0 ; Set z_offset
+        #BED_MESH_PROFILE LOAD="default" ; Load bed mesh
+        #SET_PRESSURE_ADVANCE ADVANCE=0.035 SMOOTH_TIME=0.040 ; Set pressure_advance settings
+        #SET_GCODE_OFFSET Z=0 ; Set z_offset
     {% endif %}
 
 [gcode_macro SET_NOZZLE]
