--- a/printer.cfg
+++ b/printer.cfg
@@ -411,6 +411,7 @@ screw3: 194,198               #check your printer
 screw3_name: rear right screw
 screw4: 26,198                #check your printer
 screw4_name: rear left screw
+horizontal_move_z: 5
 screw_thread: CW-M4
 
 [gcode_macro G29]				#界面中增加G29指令
